added ability to show error label for login captcha view

--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/SubViews/LoginCaptchaView/LoginCaptchaView.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/SubViews/LoginCaptchaView/LoginCaptchaView.xib
@@ -11,18 +11,21 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginCaptchaView" customModule="lifeBox_Business" customModuleProvider="target">
             <connections>
                 <outlet property="captchaAnswerTextField" destination="W0V-fQ-219" id="c5Q-Mt-zex"/>
+                <outlet property="captchaErrorLabel" destination="jLc-Fz-zX8" id="RHF-Iq-S9J"/>
                 <outlet property="captchaImageView" destination="PiO-kZ-3YO" id="ref-LY-uXT"/>
+                <outlet property="noErrorTextfieldToBottomConstraint" destination="ksj-of-yWZ" id="6rz-nl-DAQ"/>
                 <outlet property="refreshCaptchaButton" destination="T2I-bl-UAn" id="mVl-Rf-fWs"/>
                 <outlet property="soundCaptchaButton" destination="BX5-uu-HVf" id="xvT-hq-ADw"/>
+                <outlet property="withErrorLabelToBottomconstraint" destination="e8p-gF-VGZ" id="Pp6-yB-cab"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Fq2-os-cXj">
-            <rect key="frame" x="0.0" y="0.0" width="358" height="107"/>
+            <rect key="frame" x="0.0" y="0.0" width="358" height="126"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4PQ-l4-ggS">
-                    <rect key="frame" x="0.0" y="0.0" width="358" height="107"/>
+                    <rect key="frame" x="0.0" y="0.0" width="358" height="126"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mU4-M6-cI6">
                             <rect key="frame" x="0.0" y="0.0" width="358" height="52"/>
@@ -95,13 +98,26 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </textField>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jLc-Fz-zX8">
+                            <rect key="frame" x="20" y="112" width="318" height="14"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="14" id="TsF-l8-AnT"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="W0V-fQ-219" secondAttribute="bottom" id="8Ow-cG-LO9"/>
+                        <constraint firstItem="jLc-Fz-zX8" firstAttribute="leading" secondItem="4PQ-l4-ggS" secondAttribute="leading" constant="20" id="NF6-r7-fR2"/>
                         <constraint firstAttribute="trailing" secondItem="mU4-M6-cI6" secondAttribute="trailing" id="RfS-bf-Hqu"/>
                         <constraint firstAttribute="trailing" secondItem="W0V-fQ-219" secondAttribute="trailing" id="XMd-wg-BIO"/>
                         <constraint firstItem="W0V-fQ-219" firstAttribute="top" secondItem="mU4-M6-cI6" secondAttribute="bottom" constant="10" id="awz-dJ-UVh"/>
+                        <constraint firstAttribute="bottom" secondItem="jLc-Fz-zX8" secondAttribute="bottom" priority="750" id="e8p-gF-VGZ"/>
+                        <constraint firstItem="jLc-Fz-zX8" firstAttribute="top" secondItem="W0V-fQ-219" secondAttribute="bottom" constant="5" id="hJC-lH-zrJ"/>
+                        <constraint firstAttribute="bottom" secondItem="W0V-fQ-219" secondAttribute="bottom" priority="250" constant="5" id="ksj-of-yWZ"/>
+                        <constraint firstAttribute="trailing" secondItem="jLc-Fz-zX8" secondAttribute="trailing" constant="20" id="nOD-D5-z6d"/>
                         <constraint firstItem="mU4-M6-cI6" firstAttribute="top" secondItem="4PQ-l4-ggS" secondAttribute="top" id="nTy-9v-jcq"/>
                         <constraint firstItem="W0V-fQ-219" firstAttribute="leading" secondItem="4PQ-l4-ggS" secondAttribute="leading" id="nlf-O3-9un"/>
                         <constraint firstItem="mU4-M6-cI6" firstAttribute="leading" secondItem="4PQ-l4-ggS" secondAttribute="leading" id="rlO-Hz-Yas"/>
@@ -117,12 +133,12 @@
                 <constraint firstItem="4PQ-l4-ggS" firstAttribute="leading" secondItem="4BE-uB-mU7" secondAttribute="leading" id="xzT-yR-lOj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="150.72463768115944" y="-99.107142857142847"/>
+            <point key="canvasLocation" x="150.72463768115944" y="-99.441964285714278"/>
         </view>
     </objects>
     <designables>
         <designable name="W0V-fQ-219">
-            <size key="intrinsicContentSize" width="103.5" height="16"/>
+            <size key="intrinsicContentSize" width="63.5" height="16"/>
         </designable>
     </designables>
     <resources>
