--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/LoginViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/LoginViewController.xib
@@ -20,6 +20,7 @@
                 <outlet property="fastLoginDescriptionLabel" destination="q4u-sf-hsc" id="eRF-VF-dNc"/>
                 <outlet property="forgotPasswordButton" destination="Gi3-Ce-z7w" id="vHl-dC-MLt"/>
                 <outlet property="loginButton" destination="HaE-yH-M24" id="8vd-hq-JdS"/>
+                <outlet property="loginButtonToCaptchaStackViewTopConstraint" destination="Ff2-Y1-8te" id="ZPG-Bp-Tya"/>
                 <outlet property="loginDescriptionLabel" destination="ZZ9-gW-4rJ" id="u1R-Re-X08"/>
                 <outlet property="loginErrorLabel" destination="GFq-6o-c39" id="shT-rI-RAS"/>
                 <outlet property="loginErrorViewContainer" destination="kFD-rN-NLT" id="fKQ-VU-FtN"/>
@@ -178,7 +179,7 @@
                                             </subviews>
                                         </stackView>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="2OX-NS-ngt">
-                                            <rect key="frame" x="20" y="272" width="335" height="147"/>
+                                            <rect key="frame" x="20" y="272" width="335" height="30"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="DZ8-FO-vY2">
                                                     <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
@@ -225,18 +226,15 @@
                                                         <constraint firstAttribute="height" constant="30" id="KzH-7Y-Va0"/>
                                                     </constraints>
                                                 </stackView>
-                                                <view contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="ii5-V8-YDl" userLabel="captcha" customClass="LoginCaptchaView" customModule="lifeBox_Business" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="40" width="335" height="107"/>
+                                                <view hidden="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="335" placeholderIntrinsicHeight="80" translatesAutoresizingMaskIntoConstraints="NO" id="ii5-V8-YDl" userLabel="captcha" customClass="LoginCaptchaView" customModule="lifeBox_Business" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="335" height="0.0"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="107" id="hml-0f-ClF"/>
-                                                    </constraints>
                                                 </view>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </stackView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HaE-yH-M24">
-                                            <rect key="frame" x="20" y="449" width="335" height="44"/>
+                                            <rect key="frame" x="20" y="332" width="335" height="44"/>
                                             <color key="backgroundColor" name="loginButtonBackground"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="44" id="fOe-WG-VwL"/>
@@ -255,7 +253,7 @@
                                             </connections>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="* It can be used when your company has identity integration with Turkcell." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZ9-gW-4rJ">
-                                            <rect key="frame" x="55" y="513" width="265" height="30"/>
+                                            <rect key="frame" x="55" y="396" width="265" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="jbU-ym-tu3"/>
                                             </constraints>
@@ -345,10 +343,10 @@
     </objects>
     <designables>
         <designable name="SnA-9S-aeD">
-            <size key="intrinsicContentSize" width="116" height="15"/>
+            <size key="intrinsicContentSize" width="156" height="15"/>
         </designable>
         <designable name="jaY-vd-khc">
-            <size key="intrinsicContentSize" width="91.5" height="16"/>
+            <size key="intrinsicContentSize" width="131.5" height="16"/>
         </designable>
     </designables>
     <resources>
