--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/LoginViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/LoginViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -31,7 +31,7 @@
                 <outlet property="rememberMeButton" destination="xQZ-uh-s8N" id="GvU-tH-seT"/>
                 <outlet property="rememberMeTitleButton" destination="zAp-Jh-fxd" id="Owl-yS-H8x"/>
                 <outlet property="scrollView" destination="mkB-W0-Ecj" id="gcW-Bu-wFs"/>
-                <outlet property="topPageErrorView" destination="dkR-V9-Ejo" id="lXr-zZ-evn"/>
+                <outlet property="topPageErrorView" destination="dkR-V9-Ejo" id="r0R-66-uqJ"/>
                 <outlet property="view" destination="iN0-l3-epB" id="wbG-EX-7FM"/>
             </connections>
         </placeholder>
