--- a/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/SubViews/PopupController/LoginPopupViewController.xib
+++ b/Depo/LifeBox_Business/Presentation/UserStories/Start/Login/View/SubViews/PopupController/LoginPopupViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -25,28 +25,28 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="1pU-XJ-GAg">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="1pU-XJ-GAg" userLabel="RootView">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ik-hC-43G">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbq-oL-Uwc">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zbq-oL-Uwc" userLabel="ScrollViewContainerView">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kTq-wV-ozP" userLabel="Equal View">
-                                    <rect key="frame" x="192" y="0.0" width="30" height="334"/>
+                                    <rect key="frame" x="172.5" y="0.0" width="30" height="219.5"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="suD-xX-nb9"/>
                                     </constraints>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7rw-lX-zC8">
-                                    <rect key="frame" x="20" y="334" width="374" height="228"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7rw-lX-zC8" userLabel="PopupView">
+                                    <rect key="frame" x="37.5" y="219.5" width="300" height="228"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="rlP-02-y1C">
-                                            <rect key="frame" x="167" y="30" width="40" height="40"/>
+                                            <rect key="frame" x="130" y="30" width="40" height="40"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Tvj-ZK-BGh">
                                                     <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -65,16 +65,16 @@
                                             </subviews>
                                         </stackView>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rt2-BC-lYv" userLabel="Insets View">
-                                            <rect key="frame" x="20" y="90" width="334" height="53"/>
+                                            <rect key="frame" x="20" y="90" width="260" height="53"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kj8-ts-yfn">
-                                                    <rect key="frame" x="0.0" y="32.5" width="334" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="32.5" width="260" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqy-Ya-ADV">
-                                                    <rect key="frame" x="0.0" y="0.0" width="334" height="20.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="260" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -92,10 +92,10 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tDr-Ij-zOu" userLabel="Buttons View">
-                                            <rect key="frame" x="0.0" y="143" width="374" height="85"/>
+                                            <rect key="frame" x="0.0" y="143" width="300" height="85"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bpu-d9-c2a" customClass="InsetsButton" customModule="lifeBox_Business" customModuleProvider="target">
-                                                    <rect key="frame" x="-1" y="19.5" width="188.5" height="46"/>
+                                                    <rect key="frame" x="-1" y="19.5" width="151.5" height="46"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="46" id="Afy-Ma-jWp"/>
                                                     </constraints>
@@ -107,7 +107,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ekv-7l-neg" customClass="InsetsButton" customModule="lifeBox_Business" customModuleProvider="target">
-                                                    <rect key="frame" x="186.5" y="19.5" width="188.5" height="46"/>
+                                                    <rect key="frame" x="149.5" y="19.5" width="151.5" height="46"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="46" id="8zH-CI-r8W"/>
                                                     </constraints>
@@ -119,7 +119,7 @@
                                                     </userDefinedRuntimeAttributes>
                                                 </button>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nx7-Gx-sSb">
-                                                    <rect key="frame" x="20" y="20" width="334" height="45"/>
+                                                    <rect key="frame" x="20" y="20" width="260" height="45"/>
                                                     <color key="backgroundColor" name="loginButtonBackground"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="45" id="Bnr-7f-H3t"/>
@@ -168,7 +168,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6A3-Uu-WJz" userLabel="Equal View">
-                                    <rect key="frame" x="192" y="562" width="30" height="334"/>
+                                    <rect key="frame" x="172.5" y="447.5" width="30" height="219.5"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="30" id="abg-9l-uaa"/>
@@ -186,12 +186,17 @@
                                 <constraint firstItem="kTq-wV-ozP" firstAttribute="centerX" secondItem="zbq-oL-Uwc" secondAttribute="centerX" id="OE2-Hm-1Ey"/>
                                 <constraint firstItem="7rw-lX-zC8" firstAttribute="width" secondItem="zbq-oL-Uwc" secondAttribute="width" multiplier="6:10" id="PRl-pq-afg"/>
                                 <constraint firstItem="6A3-Uu-WJz" firstAttribute="centerX" secondItem="zbq-oL-Uwc" secondAttribute="centerX" id="VwP-6v-RDy"/>
-                                <constraint firstItem="7rw-lX-zC8" firstAttribute="leading" secondItem="zbq-oL-Uwc" secondAttribute="leading" constant="20" id="kBj-6e-jUd"/>
-                                <constraint firstAttribute="trailing" secondItem="7rw-lX-zC8" secondAttribute="trailing" constant="20" id="qOu-e2-GV9"/>
+                                <constraint firstItem="7rw-lX-zC8" firstAttribute="width" secondItem="zbq-oL-Uwc" secondAttribute="width" multiplier="0.8" id="pDE-3S-Roq"/>
                             </constraints>
                             <variation key="default">
                                 <mask key="constraints">
                                     <exclude reference="PRl-pq-afg"/>
+                                    <exclude reference="pDE-3S-Roq"/>
+                                </mask>
+                            </variation>
+                            <variation key="widthClass=compact">
+                                <mask key="constraints">
+                                    <include reference="pDE-3S-Roq"/>
                                 </mask>
                             </variation>
                             <variation key="heightClass=regular-widthClass=regular">
